@@ -1,3 +1,7 @@
+Sun Oct 27 15:19:44 CET 2013
+	Implementing faster processing of upload data in multipart
+	encoding (thanks to performance analysis by Adam Homolya). -CG
+
 Thu Oct 24 10:40:03 CEST 2013
 	Adding support for connection flow control via
 	MHD_suspend_connection and MHD_resume_connection. -CG
